auth changes for token
