# structs/requestsDTOs/stringRequestDTO.go
@@ -1,0 +1,5 @@
+package requestsDTOs
+
+type StringRequestDTO struct {
+	Value string
+}
