# swagger/swagger.json
@@ -20,8 +20,39 @@
                 "tags": [
                     "auth"
                 ],
+                "description": "Login User\n\u003cbr\u003e",
+                "operationId": "AuthenticationController.Login",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Authentication content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthenticationDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserResponseDTO"
+                        }
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/auth/login/token": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
                 "description": "Login\n\u003cbr\u003e",
-                "operationId": "AuthenticationController.Create",
+                "operationId": "AuthenticationController.Login User",
                 "parameters": [
                     {
                         "in": "body",
@@ -69,6 +100,37 @@
                         "description": "",
                         "schema": {
                             "$ref": "#/definitions/responsesDTOs.UserResponseDTO"
+                        }
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/auth/token/check": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "description": "Check Token Expiry\n\u003cbr\u003e",
+                "operationId": "AuthenticationController.Check token expiry",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Authentication content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestsDTOs.StringRequestDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/responsesDTOs.StringResponseDTO"
                         }
                     },
                     "403": {
@@ -263,6 +325,15 @@
                 }
             }
         },
+        "requestsDTOs.StringRequestDTO": {
+            "title": "StringRequestDTO",
+            "type": "object",
+            "properties": {
+                "Value": {
+                    "type": "string"
+                }
+            }
+        },
         "requestsDTOs.UserResponseDTO": {
             "title": "UserResponseDTO",
             "type": "object"
@@ -284,6 +355,22 @@
                     "type": "string"
                 },
                 "Username": {
+                    "type": "string"
+                }
+            }
+        },
+        "responsesDTOs.StringResponseDTO": {
+            "title": "StringResponseDTO",
+            "type": "object",
+            "properties": {
+                "StatusCode": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "StatusDesc": {
+                    "type": "string"
+                },
+                "Value": {
                     "type": "string"
                 }
             }
